# libgit2-backends

./: .gitignore  .mold.yml  Dockerfile  Makefile
CMake/: FindCurl.cmake  FindHiredis.cmake  FindLibgit2.cmake  FindLibmemcached.cmake  FindLibmysql.cmake
elasticsearch/: CMakeLists.txt  README.md  elasticsearch.c
memcached/: CMakeLists.txt  memcached.c
mysql/: CMakeLists.txt  fnmatch.c  fnmatch.h  mysql.c  mysql_odb.c  mysql_odb.h  mysql_refdb.c  mysql_refdb.h
postgres/: postgres.c
redis/: CMakeLists.txt  hiredis.c
rocksdb/: rocks.cpp
sqlite/: CMakeLists.txt  sqlite.c  sqlite_refdb_backend.c
